# WEB-HW7

./: LICENSE  README.md  alembic.ini  my_select.py  pyproject.toml
alembic/: env.py
alembic/versions/: 263804154832_init.py
src/: connect_db.py  models.py  seed.py
