[tool.poetry]
name = "web-hw7"
version = "0.1.0"
description = "SQLAlchemy and alembic"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "web_hw7"}]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.12.0"

[tool.poetry.group.dev.dependencies]
SQLAlchemy = "^2.0.20"
psycopg2 = "^2.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
